fix iPad popup clipping by removing min-width constraint

--- a/wBlock Scripts (iOS)/Resources/pages/popup/popup.css
+++ b/wBlock Scripts (iOS)/Resources/pages/popup/popup.css
@@ -35,7 +35,6 @@ body {
 
 .popup {
   width: 100%;
-  min-width: 320px;
   max-width: 380px;
   padding: 14px;
   box-sizing: border-box;
